Fix spacing in the hero section

--- a/fylo-landing-page-with-two-column-layout/css/style.css
+++ b/fylo-landing-page-with-two-column-layout/css/style.css
@@ -428,13 +428,17 @@ section .container {
     flex-direction: row-reverse;
   }
 
+  .hero-section .container > div {
+    flex: 1;
+  }
+
   h1 {
-    margin-top: -0.5rem;
+    margin-top: -2.5rem;
     margin-bottom: 0.5rem;
   }
 
   .hero-section p {
-    width: 90%;
+    width: 95%;
     line-height: 1.2;
   }
 
@@ -442,7 +446,7 @@ section .container {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 77%;
+    width: 85%;
     gap: 1rem;
   }
 
@@ -458,5 +462,9 @@ section .container {
   .hero-form button {
     margin: 0;
     flex: 0.33;
+  }
+
+  .stay-productive-section::after {
+    background-image: url('/images/bg-curve-desktop.svg');
   }
 }
